--- a/BusquedaLibros2/Base.lproj/Main.storyboard
+++ b/BusquedaLibros2/Base.lproj/Main.storyboard
@@ -1,26 +1,154 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_5" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="BusquedaLibros2" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ISBN:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="asy-a8-K7k">
+                                <rect key="frame" x="53" y="131" width="43" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="IDinputISBN" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ingrese ISBN..." textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="4In-Zv-8El">
+                                <rect key="frame" x="53" y="160" width="230" height="30"/>
+                                <accessibility key="accessibilityConfiguration" identifier="IdinputISBN">
+                                    <accessibilityTraits key="traits" searchField="YES"/>
+                                </accessibility>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="search"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Resultados:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="za5-1t-afQ">
+                                <rect key="frame" x="53" y="225" width="107" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="107" id="fSi-wY-uxB"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="autores..." translatesAutoresizingMaskIntoConstraints="NO" id="Hnv-eI-s3J">
+                                <rect key="frame" x="53" y="338" width="313" height="60"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="textColor" red="0.30274516569999999" green="0.77145432690000004" blue="0.49795968829999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Autores:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZGu-cT-BSy">
+                                <rect key="frame" x="53" y="309" width="84" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="84" id="D33-Xb-ii8"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Título:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gg2-51-zna">
+                                <rect key="frame" x="53" y="263" width="63" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="63" id="zZr-Vh-9kE"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="titulo..." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="anT-Dz-r59">
+                                <rect key="frame" x="53" y="279" width="313" height="31"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="textColor" red="0.30274516569999999" green="0.77145432690000004" blue="0.49795968829999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Portada:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mhb-4e-j0c">
+                                <rect key="frame" x="53" y="382" width="84" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="c8I-bC-VMT">
+                                <rect key="frame" x="53" y="411" width="271" height="128"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="32H-C1-n0x">
+                                <rect key="frame" x="122" y="187" width="76" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="76" id="qRh-fD-Ogx"/>
+                                </constraints>
+                                <state key="normal" title="Limpiar"/>
+                                <connections>
+                                    <action selector="limpiar:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lKG-sv-AFx"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Busqueda Libros" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jTJ-Zf-d5Z">
+                                <rect key="frame" x="98" y="20" width="140" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Hnv-eI-s3J" firstAttribute="top" secondItem="ZGu-cT-BSy" secondAttribute="bottom" constant="8" symbolic="YES" id="00H-lM-b3C"/>
+                            <constraint firstItem="4In-Zv-8El" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="-39" id="3KW-m9-Dyf"/>
+                            <constraint firstItem="4In-Zv-8El" firstAttribute="top" secondItem="asy-a8-K7k" secondAttribute="bottom" constant="8" symbolic="YES" id="4Ys-QC-6MM"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="c8I-bC-VMT" secondAttribute="bottom" constant="197" id="4as-nh-QNV"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="4In-Zv-8El" secondAttribute="bottom" constant="546" id="4sZ-gI-Eqn"/>
+                            <constraint firstItem="ZGu-cT-BSy" firstAttribute="leading" secondItem="Mhb-4e-j0c" secondAttribute="leading" id="54b-wW-ASM"/>
+                            <constraint firstItem="jTJ-Zf-d5Z" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="6jB-zN-XQ9"/>
+                            <constraint firstItem="anT-Dz-r59" firstAttribute="trailing" secondItem="4In-Zv-8El" secondAttribute="trailing" constant="83" id="7yM-mg-gwC"/>
+                            <constraint firstItem="Hnv-eI-s3J" firstAttribute="leading" secondItem="Mhb-4e-j0c" secondAttribute="leading" id="9Qi-YG-4J1"/>
+                            <constraint firstItem="jTJ-Zf-d5Z" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="-39" id="9Yu-ya-2AP"/>
+                            <constraint firstItem="Mhb-4e-j0c" firstAttribute="leading" secondItem="c8I-bC-VMT" secondAttribute="leading" id="BKX-PC-fPA"/>
+                            <constraint firstItem="ZGu-cT-BSy" firstAttribute="trailing" secondItem="Mhb-4e-j0c" secondAttribute="trailing" id="CAt-9M-hvb"/>
+                            <constraint firstItem="ZGu-cT-BSy" firstAttribute="top" secondItem="gg2-51-zna" secondAttribute="bottom" constant="25" id="J9S-c1-GrT"/>
+                            <constraint firstItem="anT-Dz-r59" firstAttribute="leading" secondItem="ZGu-cT-BSy" secondAttribute="leading" id="LBP-vg-ggJ"/>
+                            <constraint firstItem="za5-1t-afQ" firstAttribute="leading" secondItem="gg2-51-zna" secondAttribute="leading" id="O6y-7J-Co0"/>
+                            <constraint firstItem="Mhb-4e-j0c" firstAttribute="top" secondItem="ZGu-cT-BSy" secondAttribute="bottom" constant="52" id="PWa-2p-9vb"/>
+                            <constraint firstItem="32H-C1-n0x" firstAttribute="top" secondItem="4In-Zv-8El" secondAttribute="bottom" constant="-3" id="ZaT-19-ahF"/>
+                            <constraint firstItem="Hnv-eI-s3J" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="a9E-nL-dYA"/>
+                            <constraint firstItem="4In-Zv-8El" firstAttribute="leading" secondItem="asy-a8-K7k" secondAttribute="leading" id="aQI-UA-ZeL"/>
+                            <constraint firstItem="Hnv-eI-s3J" firstAttribute="top" secondItem="anT-Dz-r59" secondAttribute="bottom" constant="28" id="bMa-pg-USW"/>
+                            <constraint firstItem="jTJ-Zf-d5Z" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="78" id="bWW-ix-rg8"/>
+                            <constraint firstItem="za5-1t-afQ" firstAttribute="top" secondItem="4In-Zv-8El" secondAttribute="bottom" constant="35" id="cfD-uA-kkG"/>
+                            <constraint firstItem="anT-Dz-r59" firstAttribute="top" secondItem="za5-1t-afQ" secondAttribute="bottom" constant="33" id="k2o-SU-j93"/>
+                            <constraint firstItem="4In-Zv-8El" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="33" id="ndk-b8-IbG"/>
+                            <constraint firstItem="gg2-51-zna" firstAttribute="top" secondItem="za5-1t-afQ" secondAttribute="bottom" constant="17" id="s8d-nL-XiU"/>
+                            <constraint firstItem="anT-Dz-r59" firstAttribute="trailing" secondItem="Hnv-eI-s3J" secondAttribute="trailing" id="saa-VD-M8a"/>
+                            <constraint firstItem="c8I-bC-VMT" firstAttribute="top" secondItem="Mhb-4e-j0c" secondAttribute="bottom" constant="8" symbolic="YES" id="snQ-df-8tx"/>
+                            <constraint firstItem="gg2-51-zna" firstAttribute="leading" secondItem="anT-Dz-r59" secondAttribute="leading" id="yKy-TQ-MAm"/>
+                            <constraint firstItem="za5-1t-afQ" firstAttribute="leading" secondItem="4In-Zv-8El" secondAttribute="leading" id="yhP-Qg-w7B"/>
+                            <constraint firstItem="32H-C1-n0x" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="-47" id="zPU-lA-3Nm"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="c8I-bC-VMT" secondAttribute="trailing" constant="70" id="zwA-j8-4sp"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="imageViewPortada" destination="c8I-bC-VMT" id="j3R-7f-v6c"/>
+                        <outlet property="inputISBN" destination="4In-Zv-8El" id="Rp0-rc-45V"/>
+                        <outlet property="textViewAutores" destination="Hnv-eI-s3J" id="vfx-rw-nAh"/>
+                        <outlet property="textViewTitulo" destination="anT-Dz-r59" id="0gZ-Ym-x0S"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.875" y="160"/>
         </scene>
     </scenes>
 </document>
